# icos

./: .gitignore  README.md  pyproject.toml  run.py
data/: ref.db
data/codex/: loadorder.txt  manifest.json
data/content/base/ability-scores/: cha.json  con.json  dex.json  int.json  str.json  wis.json
data/content/base/alignments/: lawful-good.json  neutral-evil.json  neutral-good.json
data/content/base/classes/: cleric.json  druid.json  paladin.json  rogue.json  warlock.json
data/content/base/conditions/: exhaustion.json  frightened.json  incapacitated.json  invisible.json  poisoned.json  prone.json  restrained.json
data/content/base/damage-types/: cold.json  fire.json  force.json  (+4 more)
data/packs/base/: manifest.json
docs/architecture/: boundaries.md  contracts.md  overview.md  roadmap.md
engine/: __init__.py  config.py  core.py  dice.py  encounter.py  loader.py  log.py  rules.py  session.py  state.py
engine/content/: __init__.py  bundles.py  codex.py
engine/models/: __init__.py  actions.py  actors.py  core.py  events.py
engine/systems/actions/: registry.py
engine/systems/ai/: interface.py  policies.py
engine/systems/combat/: resolution.py  targeting.py
engine/util/content/: build_bundles.py  build_codex.py
src/icos/: __init__.py
src/icos/adapters/: __init__.py
src/icos/app/: __init__.py
src/icos/content/: __init__.py  bundles.py  codex.py  db.py  loader.py  paths.py  store.py
src/icos/game/: __init__.py
src/icos/infra/: __init__.py  config.py
src/icos/kernel/: __init__.py
src/icos/tact/: __init__.py
tools/: README.md
(+2105 files in other folders)
